tests/NormalTests/paczka1/small_fuzzy/32356281.err
Error in line 1: OSJ S61 94,2
Error in line 3: OSJ A841 47,7
Error in line 11: RrBFZ2X7RO A715 78,4
